<resources>
    <string name="app_name" translatable="false">Crod v0.1b</string>
    <string name="login_name_app" translatable="false">ЦРОД</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_btn_login">Вход</string>
    <string name="login_btn_reg">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="prof">Профель</string>
    <string name="db_name">Name</string>
    <string name="db_email">Email</string>
    <string name="db_surnName">SurnName</string>
    <string name="db_tutor">Tutor</string>
    <string name="db_idSmenа">Smena</string>
    <string name="idSmena">Ввидите номер смены </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Новости</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
