<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_reg"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorBlack"

        />
    <EditText
        android:id="@+id/reg_EditText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/krugliye_ugli"
        android:padding="12dp"
        android:gravity="center"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/reg_EditText_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/krugliye_ugli"
        android:padding="12dp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:autofillHints="" />
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/krugliye_ugli"
        android:padding="12dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/krugliye_ugli"
        android:padding="12dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:autofillHints="" />
    <Button
        android:id="@+id/reg_btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_reg"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/backgraund_btn"
        android:padding="15dp"/>



</LinearLayout>